# Solana-Escrow-Dapp

backend/: .env  Cargo.toml
backend/src/: errors.rs  main.rs  solana_client.rs  state.rs  worker.rs
backend/src/auth/: jwt.rs  password.rs
backend/src/handlers/: escrow_handler.rs  mod.rs  stats_handler.rs  user_handler.rs
backend/src/models/: escrow.rs  mod.rs  stats.rs  user.rs
backend/src/routes/: escrow_routes.rs  mod.rs  stats_routes.rs  user_routes.rs
escrow/: Anchor.toml  tsconfig.json
escrow/programs/escrow/src/: lib.rs
escrow/tests/: escrow.ts
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  types.ts
frontend/app/(main)/: layout.tsx
frontend/app/(main)/dashboard/: page.tsx
frontend/app/(main)/escrows/: page.tsx
frontend/app/(main)/history/: page.jsx  page.tsx
frontend/app/(main)/tokens/: page.tsx
frontend/app/components/contract/: ContractInterface.ts  ContractInterface.tsx
frontend/app/components/providers/: SolanaWalletProvider.tsx
frontend/app/components/ui/: DealListItem.tsx  Error.tsx  EscrowDetails.tsx  EscrowForm.tsx  EscrowFormModal.tsx  Header.tsx  (+5 more)
frontend/app/dashboard/: page.tsx
frontend/app/escrows/: page.tsx
frontend/app/hooks/: useEscrowActions.tsx  useMutations.tsx  useProgram.tsx  useTokenAccounts.tsx
frontend/app/types/: params.ts  props.ts  query.ts  states.ts
frontend/app/utils/: duration.ts  token.ts
token/: Anchor.toml  package-lock.json  tsconfig.json
token/programs/token/: Cargo.toml
token/programs/token/src/: lib.rs
token/tests/: fetch-pda.ts
